<?xml version="1.0" encoding="utf-8"?><resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Yep</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_home">Yep</string>
    <string name="tab_title_chats">Chats</string>
    <string name="tab_title_friends">Friends</string>
    <string name="tab_title_explore">Explore</string>
    <string name="tab_title_my_profile">My Profile</string>
    <string name="title_activity_chat">Chat</string>
    <string name="sign_in">Sign In</string>
    <string name="label_master">Master</string>
    <string name="label_learning">Learning</string>
    <string name="icon">Icon</string>
    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="title_activity_user">User</string>
    <string name="notifications">Notifications</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile_editor">ProfileEditorActivity</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="suggestions">Suggestions</string>
    <string name="rank">Rank</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_field_required">Field required</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_incorrect_password">Password incorrect</string>
    <string name="previous_step">Previous</string>
    <string name="next_step">Next</string>
    <string name="finish">Finish</string>
    <string name="plus_symbol">+</string>
    <string name="phone_number">Phone number</string>
    <string name="unable_to_register">Unable to register</string>
    <string name="please_wait">Please wait</string>
    <string name="register_name_hint">What\'s your name?</string>
    <string name="register_verify_code_hint">Verify code</string>
    <string name="unable_to_verify_phone">Unable to verify phone</string>
    <string name="logout">Logout</string>
    <string name="no_introduction_yet">No introduction yet</string>
    <string name="nickname">Nickname</string>
    <string name="introduction">Introduction</string>
    <string name="skill">Skill</string>
    <string name="master">Master</string>
    <string name="learning">Learning</string>
    <string name="dribbble">Dribbble</string>
    <string name="github">Github</string>
    <string name="sign_in_to_provider_name">Sign in to <xliff:g id="name">%s</xliff:g></string>
    <string name="stars">Stars</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="instagram">Instagram</string>
    <string name="add">Add</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_skill">Add skill</string>
    <string name="say_hello">Say hello</string>
    <string name="unable_to_get_profile">Unable to get profile</string>
    <string name="logout_confirm_message">Are you sure to logout?</string>
    <string name="add_friend">Add friend</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="block_user">Block</string>
    <string name="report_user">Report</string>
    <string name="find_friend">Find friend</string>
    <string name="search_user">Search user</string>
    <string name="location">Location</string>
    <string name="image">Image</string>
    <string name="audio">Audio</string>
    <string name="contact_friends">Contact friends</string>
    <string name="search">Search</string>
    <string name="notifications_and_privacy">Notifications and privacy</string>
    <string name="blocked_users">Blocked users</string>
    <string name="feeds">Feeds</string>
    <string name="topics">Topics</string>
    <string name="send">Send</string>
    <string name="new_topic">New topic</string>
    <string name="topic_posted">Topic posted</string>
    <string name="remove_topic_media_confirm">Remove media from this message?</string>
    <string name="remove">Remove</string>
    <string name="drafts_saved">Drafts saved</string>
    <string name="no_content">No content</string>
    <string name="unable_to_get_location">Unable to get location</string>
    <string name="topic">Topic</string>
    <string name="title_activity_user2">UserActivity2</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="user">User</string>
    <string name="new_topic_hint">Share something to us :)</string>
    <string name="related_users">Related users</string>
    <string name="choose_skill">Choose skill</string>
    <string name="none">None</string>
    <string name="add_to_my_skills">Add to my skills</string>
    <string name="refresh">Refresh</string>
    <string name="unable_to_load_media">Unable to load media</string>
    <string name="media">Media</string>
</resources>
