<!--
  ~ Copyright (c) 2015. Catch Inc,
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/profile">
        <catchla.yep.preference.AccountInfoPreference/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings">
        <Preference
            android:fragment="catchla.yep.fragment.SettingsDetailsFragment"
            android:title="@string/notifications_and_privacy">
            <extra
                android:name="resid"
                android:value="@xml/pref_notifications_privacy"/>
        </Preference>
        <Preference android:title="@string/feedback">
            <intent
                android:targetClass="catchla.yep.activity.FeedbackActivity"
                android:targetPackage="catchla.yep"/>
        </Preference>
        <Preference android:title="@string/about">
            <intent
                android:targetClass="catchla.yep.activity.AboutActivity"
                android:targetPackage="catchla.yep"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
