<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/userScrollContent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="@dimen/element_spacing_large"
    tools:showIn="@layout/activity_user">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="?android:textColorPrimary"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_spacing_small"
        android:textColor="?android:textColorTertiary"/>

    <TextView
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_spacing_normal"
        android:textColor="?android:textColorSecondary"/>

    <TextView
        android:id="@+id/masterLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_spacing_small"
        android:layout_marginTop="@dimen/element_spacing_normal"
        android:background="?selectableItemBackground"
        android:padding="@dimen/element_spacing_normal"
        android:text="@string/label_master"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="?android:textColorSecondary"
        android:textStyle="bold"/>

    <org.apmem.tools.layouts.FlowLayout
        android:id="@+id/masterSkills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/learningLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_spacing_small"
        android:layout_marginTop="@dimen/element_spacing_normal"
        android:background="?selectableItemBackground"
        android:padding="@dimen/element_spacing_normal"
        android:text="@string/label_learning"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="?android:textColorSecondary"
        android:textStyle="bold"/>

    <org.apmem.tools.layouts.FlowLayout
        android:id="@+id/learningSkills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/providersDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/element_spacing_normal"
        android:background="?dividerVertical"/>

    <LinearLayout
        android:id="@+id/providersContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <View
        android:id="@+id/topics_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/element_spacing_normal"
        android:background="?dividerVertical"/>

    <RelativeLayout
        android:id="@+id/userTopics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:minHeight="?listPreferredItemHeight"
        android:paddingLeft="@dimen/element_spacing_normal"
        android:paddingRight="@dimen/element_spacing_normal">

        <catchla.yep.view.ActionIconView
            android:id="@+id/userTopicsIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:color="?colorPrimary"
            android:src="@drawable/ic_action_feeds"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/userTopicsIcon"
            android:layout_toLeftOf="@+id/topicsWidgetFrame"
            android:layout_toRightOf="@+id/userTopicsIcon"
            android:layout_toStartOf="@+id/topicsWidgetFrame"
            android:padding="@dimen/element_spacing_normal"
            android:text="@string/feeds"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="?colorPrimary"/>

        <catchla.yep.view.TopicsWidgetContainer
            android:id="@+id/topicsWidgetFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/element_spacing_normal">

            <LinearLayout
                android:id="@+id/widgetContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mediaPreview0"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"/>

                <ImageView
                    android:id="@+id/mediaPreview1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="@dimen/element_spacing_small"
                    android:layout_marginStart="@dimen/element_spacing_small"
                    android:gravity="center_vertical"/>

                <ImageView
                    android:id="@+id/mediaPreview2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="@dimen/element_spacing_small"
                    android:layout_marginStart="@dimen/element_spacing_small"
                    android:gravity="center_vertical"/>


                <ImageView
                    android:id="@+id/mediaPreview3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="@dimen/element_spacing_small"
                    android:layout_marginStart="@dimen/element_spacing_small"
                    android:gravity="center_vertical"/>


            </LinearLayout>

            <ProgressBar
                android:id="@+id/loadProgress"
                style="?android:progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </catchla.yep.view.TopicsWidgetContainer>
    </RelativeLayout>

</LinearLayout>